--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "ext-dom": "*",
     "ext-libxml": "*",
     "t3/min": "^3.0",
-    "plan2net/webp": "^5.1"
+    "plan2net/webp": "^5.1",
+    "websedit/we-cookie-consent": "^4.0"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest"
